gobmkida/c0/accumulate_influence
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/accumulate_influence/src/engine/influence.c:651:7: error: use of undeclared identifier 'accumulate_influence_working_area_initialized'
if ( !accumulate_influence_working_area_initialized ) 
      ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/accumulate_influence/src/engine/influence.c:654:1: error: use of undeclared identifier 'accumulate_influence_working'; did you mean 'accumulate_influence'?
accumulate_influence_working[ii] = 0; 
^~~~~~~~~~~~~~~~~~~~~~~~~~~~
accumulate_influence
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/accumulate_influence/src/engine/influence.c:618:7: note: 'accumulate_influence' declared here
void  accumulate_influence( 
      ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/accumulate_influence/src/engine/influence.c:654:1: error: subscript of pointer to function type 'void (int, int, int, int, const int *, const char *, int *)'
accumulate_influence_working[ii] = 0; 
^~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/accumulate_influence/src/engine/influence.c:655:1: error: use of undeclared identifier 'accumulate_influence_working_area_initialized'
accumulate_influence_working_area_initialized = 1; 
^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/accumulate_influence/src/engine/influence.c:657:1: error: use of undeclared identifier 'accumulate_influence_queue'; did you mean 'accumulate_influence'?
accumulate_influence_queue[0] = pos; 
^~~~~~~~~~~~~~~~~~~~~~~~~~
accumulate_influence
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/accumulate_influence/src/engine/influence.c:618:7: note: 'accumulate_influence' declared here
void  accumulate_influence( 
      ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/accumulate_influence/src/engine/influence.c:657:1: error: subscript of pointer to function type 'void (int, int, int, int, const int *, const char *, int *)'
accumulate_influence_queue[0] = pos; 
^~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/accumulate_influence/src/engine/influence.c:658:1: error: use of undeclared identifier 'accumulate_influence_working'; did you mean 'accumulate_influence'?
accumulate_influence_working[pos] = strength; 
^~~~~~~~~~~~~~~~~~~~~~~~~~~~
accumulate_influence
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/accumulate_influence/src/engine/influence.c:618:7: note: 'accumulate_influence' declared here
void  accumulate_influence( 
      ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/accumulate_influence/src/engine/influence.c:658:1: error: subscript of pointer to function type 'void (int, int, int, int, const int *, const char *, int *)'
accumulate_influence_working[pos] = strength; 
^~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/accumulate_influence/src/engine/influence.c:661:7: error: use of undeclared identifier 'accumulate_influence_queue'
iia = accumulate_influence_queue[queue_start]; 
      ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/accumulate_influence/src/engine/influence.c:671:38: error: use of undeclared identifier 'accumulate_influence_working'
current_strength = inv_attenuation * accumulate_influence_working[iia] / 4096; 
                                     ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/accumulate_influence/src/engine/influence.c:686:7: error: use of undeclared identifier 'accumulate_influence_working'
if ( !accumulate_influence_working[delta[d] + iia] ) 
      ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/accumulate_influence/src/engine/influence.c:687:1: error: use of undeclared identifier 'accumulate_influence_queue'; did you mean 'accumulate_influence'?
accumulate_influence_queue[queue_end++] = delta[d] + iia; 
^~~~~~~~~~~~~~~~~~~~~~~~~~
accumulate_influence
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/accumulate_influence/src/engine/influence.c:618:7: note: 'accumulate_influence' declared here
void  accumulate_influence( 
      ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/accumulate_influence/src/engine/influence.c:687:1: error: subscript of pointer to function type 'void (int, int, int, int, const int *, const char *, int *)'
accumulate_influence_queue[queue_end++] = delta[d] + iia; 
^~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/accumulate_influence/src/engine/influence.c:689:1: error: use of undeclared identifier 'accumulate_influence_working'; did you mean 'accumulate_influence'?
accumulate_influence_working[v7] += contribution; 
^~~~~~~~~~~~~~~~~~~~~~~~~~~~
accumulate_influence
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/accumulate_influence/src/engine/influence.c:618:7: note: 'accumulate_influence' declared here
void  accumulate_influence( 
      ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/accumulate_influence/src/engine/influence.c:689:1: error: subscript of pointer to function type 'void (int, int, int, int, const int *, const char *, int *)'
accumulate_influence_working[v7] += contribution; 
^~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/accumulate_influence/src/engine/influence.c:715:7: error: use of undeclared identifier 'accumulate_influence_working'
if ( !accumulate_influence_working[delta[d] + iia] ) 
      ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/accumulate_influence/src/engine/influence.c:716:1: error: use of undeclared identifier 'accumulate_influence_queue'; did you mean 'accumulate_influence'?
accumulate_influence_queue[queue_end++] = delta[d] + iia; 
^~~~~~~~~~~~~~~~~~~~~~~~~~
accumulate_influence
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/accumulate_influence/src/engine/influence.c:618:7: note: 'accumulate_influence' declared here
void  accumulate_influence( 
      ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/accumulate_influence/src/engine/influence.c:716:1: error: subscript of pointer to function type 'void (int, int, int, int, const int *, const char *, int *)'
accumulate_influence_queue[queue_end++] = delta[d] + iia; 
^~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/accumulate_influence/src/engine/influence.c:718:1: error: use of undeclared identifier 'accumulate_influence_working'; did you mean 'accumulate_influence'?
accumulate_influence_working[v9] += contribution_0; 
^~~~~~~~~~~~~~~~~~~~~~~~~~~~
accumulate_influence
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/accumulate_influence/src/engine/influence.c:618:7: note: 'accumulate_influence' declared here
void  accumulate_influence( 
      ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/accumulate_influence/src/engine/influence.c:718:1: error: subscript of pointer to function type 'void (int, int, int, int, const int *, const char *, int *)'
accumulate_influence_working[v9] += contribution_0; 
^~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/accumulate_influence/src/engine/influence.c:728:7: error: use of undeclared identifier 'accumulate_influence_queue'
iib = accumulate_influence_queue[k]; 
      ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/accumulate_influence/src/engine/influence.c:729:15: error: use of undeclared identifier 'accumulate_influence_working'
if ( ( double)accumulate_influence_working[iib] > 81.5 || !influence[iib] ) 
              ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/accumulate_influence/src/engine/influence.c:730:19: error: use of undeclared identifier 'accumulate_influence_working'
influence[iib] += accumulate_influence_working[iib]; 
                  ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/accumulate_influence/src/engine/influence.c:731:1: error: use of undeclared identifier 'accumulate_influence_working'; did you mean 'accumulate_influence'?
accumulate_influence_working[iib] = 0; 
^~~~~~~~~~~~~~~~~~~~~~~~~~~~
accumulate_influence
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/accumulate_influence/src/engine/influence.c:618:7: note: 'accumulate_influence' declared here
void  accumulate_influence( 
      ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/accumulate_influence/src/engine/influence.c:731:1: error: subscript of pointer to function type 'void (int, int, int, int, const int *, const char *, int *)'
accumulate_influence_working[iib] = 0; 
^~~~~~~~~~~~~~~~~~~~~~~~~~~~
25 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/accumulate_influence/src/obj/1/influence.o] Error 1
